syntax = "proto3";

package hello;

option go_package = "./proto;hello";

// HelloService 定义了一个简单的问候服务
service HelloService {
  // SayHello 实现一个简单的问候方法
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  // SayHelloStream 实现一个流式问候方法
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse) {}
}

// HelloRequest 请求消息
message HelloRequest {
  string name = 1;
}

// HelloResponse 响应消息
message HelloResponse {
  string message = 1;
  string timestamp = 2;
} 